--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,23 @@ body {
   z-index: 1000;
 }
 
+:root {
+  --bg: #272932;
+  --light-bg: #4c4d62;
+  --bg-accent: #b74f6f;
+  --pink: #ea3788;
+  --blue: #00a7e1;
+
+  --primary-accent: #cb48b7;
+
+  --text-color: #eeeeee;
+  --nav-size: 80px;
+  --border: 2px solid rgba(70, 70, 70, 0.342);
+  --border-radius: 8px;
+  --speed: 300ms;
+  --window-width: 100vw;
+}
+
 /* ::-webkit-scrollbar {
   width: 10px;
 } */
