--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -2,16 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #00000033;
-  border: 3px solid #00000033;
+  /* border: 3px solid #00000033; */
   border-radius: 30px;
   padding: 1rem;
 }
 .user-profile-container {
-  margin: 1rem 2rem;
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 100%;
 }
 .user-profile-cover-photo {
   height: 300px;
