--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -237,7 +237,7 @@
   padding: 0.25rem 0.25rem;
   /* background-color: rgba(0, 0, 0, 0.26); */
   cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.288);
+  background-color: #ffffff1a;
 }
 .like-container svg {
   padding: 0 0.25rem;
@@ -270,7 +270,7 @@
   padding: 0 0.25rem;
 }
 .number-of-likes {
-  font-size: 1.45rem;
+  font-size: 1.1rem;
   padding: 0 0.25rem;
   display: flex;
   justify-content: center;
