--- a/src/CSS Components/RightSidebar.css
+++ b/src/CSS Components/RightSidebar.css
@@ -17,6 +17,7 @@
   align-items: center;
   background-color: var(--bg);
   height: 100%;
+  padding: 1rem;
 }
 .rightsidebar-main-section {
   display: flex;
