--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -60,7 +60,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 1rem 0;
   width: 100%;
 }
 
@@ -82,7 +81,42 @@
 }
 .sidebar-username {
   font-weight: 600;
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
+}
+
+/* Upload Button */
+.upload-meme-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  background-color: #1e2026;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  padding: 4px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 500;
+  line-height: 1.75;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  border: 1px solid rgba(255, 255, 255, 0);
+  border-radius: 15px;
+}
+.upload-meme-button:hover {
+  transition: all var(--speed);
+  filter: brightness(1.5);
+  border: white 1px solid;
 }
 .sidebar-navigation {
   border-top: 1px solid rgba(207, 207, 207, 0.13);
