--- a/src/CSS Components/TopBar.css
+++ b/src/CSS Components/TopBar.css
@@ -1,35 +1,97 @@
 .topbar-content {
-  position: relative;
   display: flex;
-  flex-direction: column;
-  height: 100%;
-  padding: 0.25rem;
-  width: 100%;
-  border-bottom: 0.5px solid rgba(255, 255, 255, 0.212);
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 2rem;
+  border-bottom: 1px solid #ffffff3b;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: var(--bg);
+  height: 75px;
 }
-.topbar-button-content {
+.topbar-logo {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0.9rem;
   font-weight: 600;
-  font-size: 1.25rem;
-}
-.add-dank-meme {
-  /* background-image: linear-gradient(#ea3788, #00a7e1); */
-  /* color: var(--bg); */
+  font-size: 2rem;
   color: white;
-  /* background-color: white; */
-  border: 10px solid;
-  border-image-slice: 1;
-  border-width: 5px;
-  width: auto;
-  padding: 1rem;
-  border-image-source: linear-gradient(to left, #ea3788, #00a7e1);
-  padding: 1rem;
-  border-radius: 20px;
 }
-.add-dank-meme:hover {
-  filter: brightness(1.5);
+.topbar-upload-meme-button {
+  padding: 4px;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  background-color: #1e2026;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  padding: 4px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  border: 1px solid rgba(255, 255, 255, 0);
+  border-radius: 15px;
+}
+.topbar-upload-meme-button:hover {
+  background-color: rgba(255, 255, 255, 0.11);
   transition: all var(--speed);
+}
+.upload-meme-button-text {
+  padding-right: 5px;
+  display: flex;
+}
+.topbar-upload-meme-button svg {
+  padding-right: 5px;
+  height: 30px;
+  width: 30px;
+}
+
+.topbar-avatar-container {
+  margin-left: auto;
+  display: flex;
+  height: 42px;
+  border-radius: 20px;
+  width: 42px;
+  justify-self: center;
+  align-items: center;
+  cursor: pointer;
+}
+/* MODAL*/
+.topbar-profile-modal {
+  position: absolute;
+  top: 76px;
+  right: 0;
+  width: 200px;
+  background-color: #1e2026;
+  border: 1px solid black;
+  z-index: 1001;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  color: white;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.topbar-profile-modal-item {
+  font-size: 1rem;
+  padding: 1rem;
+  display: flex;
+}
+.topbar-profile-modal-item:hover {
+  transition: all var(--speed);
+  background-color: rgba(255, 255, 255, 0.123);
+  border-radius: 10px;
 }
