Adjusted padding in main content to decrease excess space

--- a/src/CSS Components/TopBar.css
+++ b/src/CSS Components/TopBar.css
@@ -84,6 +84,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
 .topbar-profile-modal-item {
   font-size: 1rem;
