--- a/src/CSS Components/TopBar.css
+++ b/src/CSS Components/TopBar.css
@@ -18,21 +18,27 @@
   font-size: 2rem;
   color: white;
 }
-.topbar-upload-meme-button {
-  padding: 4px;
+.topbar-icon-container {
+  display: flex;
   margin-left: auto;
+}
+
+.topbar-upload-meme-button {
+  margin: 0 1rem;
+  padding: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border: none;
+  /* border: none; */
   color: #fff;
-  background-color: #1e2026;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
-    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  /* background-color: var(--primary-accent); */
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   padding: 4px;
   font-size: 0.875rem;
-  min-width: 64px;
+  border-radius: 50%;
   box-sizing: border-box;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
@@ -46,8 +52,9 @@
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 15px;
 }
+
 .topbar-upload-meme-button:hover {
-  background-color: rgba(255, 255, 255, 0.11);
+  border: 1px solid white;
   transition: all var(--speed);
 }
 .upload-meme-button-text {
@@ -55,13 +62,12 @@
   display: flex;
 }
 .topbar-upload-meme-button svg {
-  padding-right: 5px;
   height: 30px;
   width: 30px;
 }
 
 .topbar-avatar-container {
-  margin-left: auto;
+  margin: 0 1rem;
   display: flex;
   height: 42px;
   border-radius: 20px;
@@ -87,11 +93,44 @@
   border-radius: 10px;
 }
 .topbar-profile-modal-item {
-  font-size: 1rem;
   padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.topbar-profile-modal-item svg {
+}
+.topbar-profile-modal-item-text {
   display: flex;
 }
 .topbar-profile-modal-item:hover {
+  transition: all var(--speed);
+  background-color: rgba(255, 255, 255, 0.123);
+  border-radius: 10px;
+}
+.topbar-profile-modal-icon {
+  margin-right: 1rem;
+  width: 24px;
+  height: 24px;
+}
+.topbar-profile-modal-logout-container {
+  border-top: 1px solid rgba(255, 255, 255, 0.315);
+  display: flex;
+  width: 100%;
+}
+.topbar-profile-modal-item-logout {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.topbar-profile-modal-item-logout:hover {
   transition: all var(--speed);
   background-color: rgba(255, 255, 255, 0.123);
   border-radius: 10px;
