--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -4,7 +4,7 @@
   align-items: center;
   /* border: 3px solid #00000033; */
   border-radius: 30px;
-  padding: 1rem;
+  padding: 2rem;
 }
 .user-profile-container {
   display: flex;
@@ -139,8 +139,8 @@
   width: 50%;
   color: white;
   font-weight: 600;
-  background-color: var(--pink);
-  border: 2px solid var(--pink);
+  background-color: var(--primary-accent);
+  border: 2px solid var(--primary-accent);
 
   padding: 1rem;
   margin: 0 2rem;
@@ -155,7 +155,7 @@
   width: 50%;
   color: white;
   font-weight: 600;
-  border: 2px solid var(--pink);
+  border: 2px solid var(--primary-accent);
   padding: 1rem;
   margin: 0 2rem;
   font-size: 1.25rem;
