Implemented a toggle for dark and light mode, a picker for the accent color. The top and sidebar as well as the cards are properly displaying correct colors

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   height: 100%;
-  background-color: #272932 !important;
+  background-color: var(--bg) !important;
 }
 
 .App {
