--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -16,7 +16,7 @@
   width: 100%;
   background: no-repeat center/80% url('../Assets/doge.svg');
   border-radius: 20px;
-  background-color: white;
+  background-color: var(--text-color);
 }
 .user-profile-avatar {
   height: 40px;
@@ -34,7 +34,8 @@
   background-color: white;
 }
 .user-username {
-  color: white;
+  color: var(--text-color);
+
   padding: 1rem;
   font-size: 2rem;
   font-weight: 600;
@@ -66,7 +67,7 @@
   padding: 0 2rem;
   width: 100%;
   align-items: center;
-  color: white;
+  color: var(--text-color);
   font-size: 1.2rem;
   font-weight: 600;
   flex-wrap: wrap;
@@ -97,9 +98,9 @@
   display: flex;
   font-size: 1.25rem;
   font-weight: 600;
-  color: white;
+  color: var(--text-color);
   padding-bottom: 2rem;
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid var(--text-color);
 }
 
 .user-profile-posts-container {
@@ -160,7 +161,7 @@
   margin: 0 2rem;
   font-size: 1.25rem;
   border-radius: 20px;
-  background-color: rgba(236, 28, 63, 0.075);
+  background-color: var(--highlight);
   animation: appearButton var(--speed);
 }
 .user-follow-button:hover {
