--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -102,7 +102,7 @@
 .clickable {
   font-weight: 600;
   padding-bottom: auto;
-  color: white;
+  color: var(--text-color);
   text-overflow: ellipsis;
   margin-right: 3px;
   cursor: pointer;
@@ -117,7 +117,7 @@
 }
 .hashtag-identifier {
   font-size: 14px;
-  color: rgb(142, 142, 142);
+  color: var(--secondary-text-color);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -208,7 +208,7 @@
 /*End Of Pencil*/
 .meme-title {
   font-weight: 500;
-  color: #fbfaf8b0;
+  color: var(--secondary-text-color);
 }
 .lower {
   display: flex;
@@ -232,12 +232,13 @@
   align-items: center;
   text-align: center;
   width: auto;
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   border-radius: 15px;
   padding: 0.25rem 0.25rem;
   /* background-color: rgba(0, 0, 0, 0.26); */
   cursor: pointer;
-  background-color: #ffffff1a;
+  /* background-color: #ffffff1a; */
+  background-color: var(--line);
 }
 .like-container svg {
   padding: 0 0.25rem;
@@ -277,7 +278,8 @@
   align-items: center;
   text-align: center;
   font-weight: 500;
-  color: #cacacac9;
+  /* color: #cacacac9; */
+  color: var(--text-color);
 }
 .icon-container {
   display: flex;
@@ -292,7 +294,7 @@
 .verified-container {
   height: 10px;
   width: 10px;
-  background-color: white;
+  background-color: var(--primary-accent);
   padding: 3px;
   display: flex;
   justify-content: center;
@@ -317,7 +319,7 @@
   justify-content: center;
   align-items: center;
   width: 80px;
-  color: white;
+  color: var(--text-color);
   font-weight: 600;
   border: 2px solid var(--primary-accent);
   padding: 0.25rem;
@@ -331,7 +333,7 @@
   justify-content: center;
   align-items: center;
   width: 80px;
-  color: white;
+  color: var(--text-color);
   font-weight: 600;
   border: 2px solid var(--primary-accent);
   padding: 0.25rem;
