--- a/src/CSS Components/TopBar.css
+++ b/src/CSS Components/TopBar.css
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   margin: 0 2rem;
-  border-bottom: 1px solid #ffffff3b;
+  border-bottom: 1px solid var(--line);
   position: sticky;
   top: 0;
   z-index: 100;
@@ -16,7 +16,7 @@
   justify-content: center;
   font-weight: 600;
   font-size: 2rem;
-  color: white;
+  color: var(--text-color);
 }
 .topbar-icon-container {
   display: flex;
@@ -32,7 +32,7 @@
   align-items: center;
   cursor: pointer;
   /* border: none; */
-  color: #fff;
+  color: var(--text-color);
   /* background-color: var(--primary-accent); */
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
     rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
@@ -55,7 +55,7 @@
 }
 
 .topbar-upload-meme-button:hover {
-  border: 1px solid white;
+  border: 1px solid var(--text-color);
   transition: all var(--speed);
 }
 
@@ -94,11 +94,11 @@
   top: 76px;
   right: 0;
   width: 200px;
-  background-color: #1e2026;
-  border: 1px solid black;
+  background-color: var(--bg);
+  border: 1px solid var(--text-color);
   z-index: 1001;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  color: white;
+  color: var(--text-color);
   padding: 1rem;
   display: flex;
   flex-direction: column;
