--- a/src/CSS Components/TrendingTopics.css
+++ b/src/CSS Components/TrendingTopics.css
@@ -23,6 +23,7 @@
   flex-wrap: wrap;
 }
 .trendingtopics-text {
+  font-size: 1rem;
   padding: 0.5rem;
   margin: 0.3rem;
   border: 1px solid white;
