--- a/src/CSS Components/Countdown.css
+++ b/src/CSS Components/Countdown.css
@@ -14,12 +14,9 @@
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
-  height: 80px;
-  font-size: 2rem;
-
-  border: 3px solid #55565d38;
+  font-size: 1.25rem;
   width: auto;
-  padding: 1rem;
+  margin-left: auto;
 }
 .countdown-timer-title {
   display: flex;
@@ -30,7 +27,7 @@
 }
 .countdown-timer-time {
   display: flex;
-  color: rgba(255, 255, 255, 0.596);
+  color: var(--line);
   font-weight: 600;
   justify-content: center;
   align-items: center;
