--- a/src/CSS Components/Dashboard.css
+++ b/src/CSS Components/Dashboard.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   margin-bottom: 2rem;
   width: 100%;
-  color: white;
+  color: var(--text-color);
 }
 .dashboard {
   width: 100%;
@@ -17,7 +17,7 @@
   height: 100%;
   width: 100%;
   margin: 0 15rem;
-  max-width: 1400px;
+  max-width: 1200px;
   position: relative;
   flex-direction: column;
 }
@@ -96,7 +96,7 @@
 }
 .end-of-memes {
   font-size: 1.4rem;
-  color: white;
+  color: var(--text-color);
   margin: 2rem;
   font-weight: 500;
 }
@@ -106,7 +106,6 @@
   }
   .end-of-memes {
     font-size: 1.4rem;
-    color: white;
     margin: 3rem 2rem;
     font-weight: 500;
   }
