--- a/src/CSS Components/Loading.css
+++ b/src/CSS Components/Loading.css
@@ -11,7 +11,7 @@
   margin: 0.9rem;
   font-weight: 600;
   font-size: 3rem;
-  color: white;
+  color: var(--text-color);
 }
 .loading-sidebar-logo svg {
   width: 70px;
