--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -121,11 +121,12 @@
 .sidebar-navigation {
   /* border-top: 1px solid rgba(207, 207, 207, 0.13); */
   font-size: 0.5rem;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   display: flex;
   flex-direction: column;
   position: relative;
   height: auto;
+  margin: 0.25rem;
 }
 
 .sidebar-navigation-icon-active {
@@ -136,7 +137,7 @@
 }
 
 .navigation-group {
-  padding: 0.9rem 0;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -146,6 +147,11 @@
   font-size: 1.3rem;
   color: var(--text-color);
   font-weight: 500;
+  border-radius: 20px;
+}
+.navigation-group:hover {
+  background-color: var(--hover);
+  transition: all var(--speed);
 }
 
 .navigation-group-active {
@@ -225,6 +231,20 @@
   line-height: 10px;
   display: inline-block;
   text-align: start;
+}
+/*Daily Memelord*/
+.sidebar-container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.25rem;
+  cursor: pointer;
+  color: var(--text-color);
+  font-weight: 600;
+  border-top: 1px solid var(--shadow);
+  margin-top: 1.5rem;
 }
 
 /*Settings components*/
