--- a/src/CSS Components/TrendingTopics.css
+++ b/src/CSS Components/TrendingTopics.css
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1rem;
   flex-direction: column;
   width: 100%;
 }
 .trendingtopics-title-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
   font-size: 1.25rem;
   padding: 1rem;
+
+  width: 100%;
 }
 .trendingtopics-title {
   display: flex;
@@ -26,7 +28,7 @@
   font-size: 1rem;
   padding: 0.5rem;
   margin: 0.3rem;
-  border: 1px solid white;
+  border: 1px solid var(--text-color);
   border-radius: 30px;
   flex: 0 1 20%;
 
@@ -35,6 +37,7 @@
 }
 
 .trendingtopics-text:hover {
-  filter: brightness(150%);
+  border: 1px solid var(--primary-accent);
+  background-color: var(--hover);
   transition: var(--speed);
 }
