--- a/src/CSS Components/routes/settings/Settings.css
+++ b/src/CSS Components/routes/settings/Settings.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
+  padding: 2rem;
   width: 100%;
   color: var(--text-color);
 }
@@ -12,7 +13,7 @@
   height: 70vh;
   border: 1px solid var(--line);
   color: var(--text-color);
-  width: 40%;
+  /* width: 30%; */
   padding: 1rem;
 }
 .settings-header-option {
@@ -24,9 +25,9 @@
   border-radius: 15px;
 }
 .settings-header-option:hover {
-  background-color: rgba(255, 255, 255, 0.068);
+  /* background-color: rgba(255, 255, 255, 0.068); */
+  background-color: var(--hover);
   border-radius: 15px;
-
   transition: all var(--speed);
 }
 .settings-header-option-icon {
@@ -48,18 +49,43 @@
   width: 70%;
   border: 1px solid var(--line);
 }
-.settings-dropdown-column > div {
-  padding: 1rem;
+.settings-main-section {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
+.settings-option {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 15px;
+  width: 100%;
+}
+
+.settings-option-icon {
+  height: 32px;
+  width: 32px;
+}
+.settings-option-text {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--text-color);
+  margin-left: 10px;
+}
+
 .select-accent-color {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
 }
 .select-accent-color > div {
-  padding: 1rem;
+  padding: 1rem 0.5rem;
 }
 .setting-dropdown-title {
+  padding: 1rem;
   display: flex;
   width: 100%;
   justify-content: flex-start;
@@ -68,6 +94,12 @@
 }
 .settings-header-option {
   display: flex;
+}
+.settings-header-option-active {
+  color: var(--primary-accent);
+}
+.settings-header-option-active svg {
+  stroke: var(--primary-accent);
 }
 .color-container {
   width: 60px;
