--- a/src/CSS Components/TopBar.css
+++ b/src/CSS Components/TopBar.css
@@ -52,11 +52,12 @@
   transition: all 0.3s;
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 15px;
-  background-color: var(--hover);
+  /* background-color: var(--hover); */
 }
 
 .topbar-upload-meme-button:hover {
   border: 1px solid var(--text-color);
+  background-color: var(--hover);
   transition: all var(--speed);
 }
 
@@ -90,15 +91,21 @@
   cursor: pointer;
 }
 /* MODAL*/
+.topbar-profile-modal-parent {
+  display: flex;
+}
+
 .topbar-profile-modal {
   position: absolute;
-  top: 76px;
+  top: 70px;
   right: 0;
   width: 200px;
   background-color: var(--bg);
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--bg);
   z-index: 1001;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: var(--hover) 0px 54px 55px, var(--hover) 0px -12px 30px,
+    var(--hover) 0px 4px 6px, var(--hover) 0px 12px 13px,
+    var(--hover) 0px -3px 5px;
   color: var(--text-color);
   padding: 1rem;
   display: flex;
@@ -112,6 +119,18 @@
   align-items: center;
   font-size: 1.1rem;
   cursor: pointer;
+  border-radius: 10px;
+}
+.topbar-profile-modal-item-active {
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+  color: var(--primary-accent);
+  background-color: var(--hover);
+  border-radius: 10px;
 }
 
 .topbar-profile-modal-item svg {
@@ -122,7 +141,6 @@
 .topbar-profile-modal-item:hover {
   transition: all var(--speed);
   background-color: var(--hover);
-  border-radius: 10px;
 }
 .topbar-profile-modal-icon {
   margin-right: 1rem;
