--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -64,7 +64,7 @@
 .user-profile-stats {
   display: flex;
   justify-content: space-around;
-  padding: 0 2rem;
+  padding: 1rem 2rem;
   width: 100%;
   align-items: center;
   color: var(--text-color);
@@ -176,4 +176,28 @@
   width: 60vw;
   justify-content: center;
   align-items: center;
+}
+.title-container {
+  margin-left: 5px;
+  padding: 0.5rem;
+  padding: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+  /* background-color: var(--primary-accent); */
+  color: var(--neon-font-color);
+  /* text-shadow: 2px 2px var(--highlight); */
+  /* text-shadow: 0 0 7px var(--bg), 0 0 10px var(--bg), 0 0 21px var(--bg), 0 0 42px var(--primary-accent), 0 0 82px var(--primary-accent), 0 0 92px var(--primary-accent), 0 0 102px var(--primary-accent), 0 0 151px var(--primary-accent); */
+  text-shadow: -1px -1px 1px var(--light-highlight),
+    -1px 1px 1px var(--highlight), 1px -1px 1px var(--highlight),
+    1px 1px 1px var(--highlight), 0 0 3px var(--highlight),
+    -2px 0 2px var(--light-highlight), -2px 0 4px var(--light-highlight),
+    2px 0 2px var(--light-highlight), 2px 0 4px var(--light-highlight),
+    0 0 2px var(--light-highlight), 0 0 4px var(--light-highlight),
+    0 0 10px var(--light-highlight), 0 0 20px var(--light-highlight),
+    0 0 15px var(--highlight), 0 0 20px var(--highlight),
+    0 0 40px var(--light-highlight), 0 0 50px var(--light-highlight),
+    0 0 200px var(--light-highlight), 0 0 200px var(--light-highlight);
 }
