--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -1,10 +1,13 @@
 .card-area {
   display: flex;
   width: 35vw;
-  margin: 1rem 2.5rem;
+  margin: 0rem 2.5rem;
   max-width: 800px;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid var(--line);
+  padding-bottom: 1rem;
+
   /* DISABLED FOR NON MOBILE
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border: rgb(235, 238, 240) 1px solid;
@@ -22,6 +25,7 @@
   align-items: center;
   justify-content: center;
   padding: 2rem 2rem 0 2rem;
+
   /* DISABLED FOR NON MOBILE
   background-color: rgba(255, 255, 255, 0.548);
   */
@@ -163,7 +167,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #8b8b8b26;
+  background-color: var(--hover);
   border-radius: 5px;
   min-width: 100%;
 }
