--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -77,7 +77,7 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
 }
 .meme-identification {
   justify-content: center;
