--- a/src/CSS Components/Countdown.css
+++ b/src/CSS Components/Countdown.css
@@ -17,6 +17,8 @@
   font-size: 1.25rem;
   width: auto;
   margin-left: auto;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
 }
 .countdown-timer-title {
   display: flex;
