--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -77,6 +77,9 @@
   max-height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
+  border: 2px solid transparent;
+  box-shadow: rgb(6 24 44 / 40%) 0px 0px 0px 2px,
+    rgb(6 24 44 / 65%) 0px 4px 6px -1px, rgb(255 255 255 / 8%) 0px 1px 0px inset;
 }
 .sidebar-username {
   font-weight: 600;
@@ -153,6 +156,11 @@
 .navigation-group:hover {
   background-color: var(--hover);
   transition: all var(--speed);
+}
+.navigation-group-memelord-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navigation-group-memelord {
@@ -265,7 +273,7 @@
   cursor: pointer;
   color: var(--secondary-text-color);
   font-weight: 500;
-  border-top: 1px solid var(--shadow);
+  border-top: 1px solid var(--line);
 }
 .memelord-container {
   padding: 1rem;
@@ -277,7 +285,7 @@
   cursor: pointer;
   color: var(--secondary-text-color);
   font-weight: 500;
-  border-top: 1px solid var(--shadow);
+  border-top: 1px solid var(--line);
   margin-top: 1rem;
 }
 .daily-memelord-rank {
