--- a/src/CSS Components/TrendingTopics.css
+++ b/src/CSS Components/TrendingTopics.css
@@ -28,9 +28,10 @@
   font-size: 1rem;
   padding: 0.5rem;
   margin: 0.3rem;
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--line);
   border-radius: 30px;
   flex: 0 1 20%;
+  color: var(--secondary-text-color);
 
   cursor: pointer;
   background-color: var(--bg);
