--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -4,7 +4,9 @@
   align-items: center;
   /* border: 3px solid #00000033; */
   border-radius: 30px;
-  padding: 2rem;
+  margin: 2rem;
+  background-color: #ffffff05;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .user-profile-container {
   display: flex;
