--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -146,9 +146,9 @@
   align-items: center;
   font-size: 1rem;
   cursor: pointer;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   color: var(--text-color);
-  font-weight: 500;
+  font-weight: 600;
   border-radius: 20px;
   min-width: 200px;
   width: fit-content;
@@ -194,7 +194,7 @@
   height: 34px;
 }
 .navigation-group-text {
-  margin-left: 1.5rem;
+  margin-left: 0.75rem;
 }
 .navigation-group-items {
   width: auto;
@@ -238,7 +238,7 @@
 }
 
 .notification-alert {
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   z-index: 200000;
   position: absolute;
   justify-content: center;
@@ -318,7 +318,7 @@
 }
 
 /*CSS Transition*/
-.navigation-primary-enter {
+/* .navigation-primary-enter {
   position: absolute;
   transform: translateX(-110%);
   transition: all var(--speed) ease;
@@ -352,7 +352,7 @@
   position: absolute;
   transform: translateX(140%);
   transition: all var(--speed) ease;
-}
+} */
 
 @media only screen and (min-height: 900px) {
   .navigation-group-text {
