--- a/src/CSS Components/MobileNav.css
+++ b/src/CSS Components/MobileNav.css
@@ -33,7 +33,7 @@
   align-items: center;
   padding: 0 20px;
   height: 100%;
-  background-color: rgb(121 121 121 / 18%);
+  background-color: var(--line);
   margin: 2px;
   border-radius: 5px;
   min-height: inherit;
@@ -45,7 +45,12 @@
   height: 100%;
   margin: 2px;
   min-height: inherit;
+  color: var(--text-color);
 }
 .mobile-nav-icon svg {
-  width: 28px;
+  height: 34px;
+  width: 34px !important;
+}
+.message-icon {
+  margin-top: 4px;
 }
