--- a/src/CSS Components/MobileHeader.css
+++ b/src/CSS Components/MobileHeader.css
@@ -5,9 +5,8 @@
   display: flex;
   position: fixed;
   top: 0;
-  background-color: #272932;
-  padding-left: 24px;
-  padding-right: 10px;
+  background-color: #00000017;
+  padding: 0.5rem;
   min-height: 62px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
@@ -16,7 +15,10 @@
   align-items: center;
 }
 .navbar-content {
-  width: 100%;
+  position: absolute;
+  top: 0.5rem;
+  left: 50%;
+  transform: translateX(-50%);
   justify-content: center;
   align-items: center;
   display: flex;
@@ -27,6 +29,9 @@
   display: flex;
   font-weight: 600;
   font-size: 2rem;
+}
+.navbar-logo svg {
+  stroke: black;
 }
 .navbar-logo span {
   margin-left: 1rem;
@@ -44,4 +49,10 @@
 .navbar-avatar-container {
   background-color: #00000014;
   border-radius: 50%;
+}
+
+.navbar-hamburger {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
